--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Index.cshtml
@@ -48,6 +48,9 @@
                                 Məhsulun Adı
                             </th>
                             <th>
+                                Məhsulun qısa icmalı
+                            </th>
+                            <th>
                                 Məhsulun Kateqoriyası
                             </th>
                             <th>
