--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -456,6 +456,21 @@
                                         </a>
                                     </li>
                                 }
+                                @if (User.HasAccess("admin.orders.index"))
+                                {
+                                    <li class="">
+                                        <a asp-controller="orders" asp-action="index">
+                                            <span class="pcoded-micon"><i class="fa-solid fa-basket-shopping"></i></span>
+                                            <span class="pcoded-mtext">Sifarişlər</span>
+                                        </a>
+                                    </li>
+                                }
+                                <li class="">
+                                    <a asp-area="" asp-controller="home" asp-action="index">
+                                        <span class="pcoded-micon"><i class="fa-solid fa-earth-americas"></i></span>
+                                        <span class="pcoded-mtext">Sayta keçid</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </nav>
